<resources>
    <string name="version">MissileLauncher Version</string>
    <string name="versionNum">1.0.12</string>


    <string name="app_name">MissileLauncher</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_HUD">HUD</string>

    <!-- Strings related to Settings -->
    <string name="permissionPrompt">Click here, then give MissileLauncher permission to draw over other apps.</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_group1">Group 1 Settings</string>
    <string name="pref_group2">Group 2 Settings</string>
    <string name="pref_group3">Group 3 Settings</string>
    <string name="pref_group4">Group 4 Settings</string>
    <string name="pref_group5">Group 5 Settings</string>
    <string name="pref_group6">Group 6 Settings</string>
    <string name="pref_group7">Group 7 Settings</string>
    <string name="pref_groupEnabled">Enable This Group</string>
    <string name="pref_groupIcon">Select Icon for this Group</string>
    <string name="pref_groupAppsInGroup">Select Apps for this Group</string>
    <string name="save_this_group">Save Selected Apps</string>
    <string name="appicon">appIcon</string>
    <string name="group_name">Group Name:</string>
    <string name="enable_missilelauncher">Enable MissileLauncher</string>
    <string name="settings">Settings</string>
    <string name="show_ungrouped_apps_only">Show UnGrouped Apps Only</string>
    <string name="foreground_text_message1">This notification will make sure I keep working.</string>
    <string name="foreground_text_message2">It can be disabled in the app.</string>
    <string name="show_notification_text">Show Notification (app may stop working if this is disabled)</string>

</resources>
