<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.missilelauncher.overlaytestv1.NumberPickerPreference
        android:key="numGroups"
        android:title="Number of Groups"
        android:defaultValue="7" />

    <com.missilelauncher.overlaytestv1.NumberPickerPreference
        android:key="numAppCols"
        android:title="Number of App Columns"
        android:defaultValue="6" />

    <com.missilelauncher.overlaytestv1.NumberPickerPreference
        android:key="numAppRows"
        android:title="Number of App Rows"
        android:defaultValue="10" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />



</PreferenceScreen>
